syntax = "proto2";
option java_package = "com.rwproto";
option java_outer_classname = "SecretAreaProtos";
import "TowerService.proto";
import "DataSyn.proto";

//资源类型

//enum ESecretType {
//	GOLD_TYPE_ONE = 0;//金币副本1
//	GOLD_TYPE_THREE = 1;//金币副本3
//	GOLD_TYPE_TEN = 2;//金币副本10
//	EXP_TYPE_ONE = 3;//经验副本1
//	EXP_TYPE_THREE = 4;//经验副本3
//	EXP_TYPE_TEN = 5;//经验副本10
//	STONG_TYPE_ONE = 6;//强化时1
//	STONG_TYPE_THREE = 7;//强化时3
//	STONG_TYPE_TEN = 8;//强化时10
	
//}

enum EMterialType{
    goldType=0;//金币
    expType=1;//经验药
    strenthType=2;//强化材料
	keyType=3;//密钥
	strone =4;//宝石
	guildMaterial=5;//公会材料
}


//

//请求
enum EReqSecretType{
	SECRET_PLAYER_BASE=0;//玩家基本数据信息
	SECRET_ADD_AREA =1;//添加秘境
	ALL_SECRET_INFO=2;//请求秘境数据
	SECRET_INFO=3;//请求单个秘境数据
	SECRET_ROLE_INFO=4;//请求对象佣兵及主角数据
	UPDATE_SECRET_ROLE_INFO=5;//更新对象佣兵及主角数据
	SECRET_ATTRACK_INFO=6;//请求进攻记录信息
	SECRET_ATTRACK_GIFT=7;//领取奖励信息
	SECRET_BEGAIN_FIGHT =8;//请求战斗
	SECRET_END_FIGHT =9;//结束战斗
	SECRET_SECRET_GIFT =10;//请求战斗领取奖励
	SECRET_FIND_ENEMY =11;//寻找对象
	SECRET_CHAT_INVITE =12;//发送邀请信息
	SECRET_BUY_KEY =13;//购买秘境钥匙
	
	SECRET_UPDATE_KEY=14;//更新玩家密钥
	SECRET_USE_TIME=15;//更新密钥恢复时间
}

enum ESuccessType {
	SUCCESS = 0;//成功
	FAIL = 1;//失败
}
//进攻或防守秘境类型
enum EAttrackType{
	DEFEND=0;//自己秘境
	Attack =1;//敌方秘境
	FRIEND =2;//盟友秘境
}
//秘境信息
message TagSecretArea 
{
required string secretId=1;//秘境id
optional string playerId=2;//创建的人物
optional int64 fightTime=3;//战斗时间
optional int64 begianTime=4;//开始挖时间,含其他同盟
optional int64 endTime=5;//结束时间
optional int64 typeSpeed=6;//结束时间
optional int32 eSecretType=7;//资源类型######
optional EAttrackType eAttrackType=8;//资源类型
repeated TagPlayerHeroInfo playerHeroList=9;//玩家list(帮派成员)  //所开秘境 同盟进驻 数据获得从TagFightRoleInfo
}

//驻守的玩家佣兵信息
message TagPlayerHeroInfo
{
required string userId=1;//人物id
repeated string heroIdList=2;//驻守的佣兵
optional bool isAllDead =3;//是否都死亡
optional string secretid =4;//驻守的秘境
optional float typeSpeed =5;//资源速度
optional int32 getNum =6;//获得资源
}

//玩家秘境基本信息
message TagSecretMember
{
	required string playerId=1;//玩家
	optional int32 secretKey=2;//玩家拥有密钥数量(player)
	optional int32 buyKeyTimes=3;//可购买次数     配置
	optional int32 secretTotalTimes=4;////总数量    配置
	optional int32 secretAttrackTimes=5;////进攻次数
	optional int64 reverTime=6;////恢复一点密钥计时间
}

//点击获得对象数据
message TagFightRoleInfo
{
optional TowerService.TagTowerEnemyInfo enemyInfo=1;//被掠夺方属性及佣兵数据
repeated TowerService.TagTowerHeroChange heroChangeList=2;//玩家自己血量变化 XXX
}

//进攻记录
message TagSecretAttack{
	required string id=1;//进攻玩家id
	optional string secretId=2;//秘境id
	required string attrackPlayerId=3;//进攻玩家id
	optional int64 atrackTime=4;//进攻时间
	optional int32 getGold=5;//获得钻石
	optional int32 getTypeNum=6;//获得对应资源数量
	optional bool isWin=7;//胜利失败
	optional int32 time=8;//进攻次数
	optional int32 keyNum=9;//获得密钥数量
	optional int32 secretType=10;//资源类型############
	optional string guildName=11;//玩家公会
	optional string regionName=12;//所属区
	optional string atrackName=13;//进攻玩家名字
	
}

message TagChat{//邀请信息
	optional string secretId =1;//秘境id
	repeated string userIdList=2;//公会成员
	optional string message=3;//信息
}

message MsgSecretRequest{
    required EReqSecretType requireType = 1;
	optional string secretId =2;
	optional string userId=3;
	optional int32 secretType=4;//##########
	optional TagFightRoleInfo tagFightRoleInfo = 5;//佣兵和主角数据
	optional TagSecretArea currSecretArea = 6; //当前操作秘境
	optional TagPlayerHeroInfo updatePlayerHeroInfo=7;//改变的驻守佣兵
	optional EAttrackType eAttrackType=8;//进攻或驻守
	repeated TowerService.TagTowerHeroChange enemyHeroChangeList = 9;//敌方血量变化
	optional bool isAll = 10;//全部
	optional TagChat chatMessage=11;//邀请驻守
	optional bool isWin=12;//是否胜利
	optional TagSecretAttack attrackList=13;//获得进攻奖励
	optional ESuccessType resultType=14;//成功
	
	optional string armyInfo=15; //玩家信息
}


message MsgSecretResponse{
	required EReqSecretType requireType = 1;
	repeated TagSecretArea secretAreaList=2;
	optional TagSecretArea currSecretArea = 3;
	optional EAttrackType eAttrackType=4;//进攻或驻守
	repeated TagSecretAttack attrackList=5;
	optional TagSecretMember secretMember=6;
	optional TagFightRoleInfo tagFightRoleInfo =7;//佣兵和主角数据
	repeated TowerService.TagTowerHeroChange enemyHeroChangeList = 8;//敌方血量变化
	optional string userId=9;
	repeated TagPlayerHeroInfo updatePlayerHeroInfo=10;//所有驻守佣兵的信息
	optional bool isWin=12;//是否胜利
	optional ESuccessType resultType=13;//成功
	
	optional int32 keyNum=14;//钥匙数量更新
	optional int32 typeNum=15;//资源数量更新
	optional int64 useTime=16;//密钥回复时间
	optional DataSyn.SynData secretAreaInfo=17; //秘境信息
	
	optional string armyInfo=18; //玩家信息
}

